# jurph-project-template

./: .gitignore  README.md  deploy.py  pyproject.toml
.github/workflows/: ci.yml
notes/: project-brief.md
scripts/: audit_dependencies.py  bootstrap_codecov.py  uvw.cmd  uvw.ps1
src/your_project/: __init__.py  codecov_bootstrap.py  main.py
tests/: test_codecov_bootstrap.py  test_smoke.py  test_uv_workflow.py
