[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project"
version = "0.1.0"
description = "Describe the project here."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
your-project = "your_project.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-p", "no:cacheprovider"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
